<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.develop.awong.musicplayer2.AlbumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/menuButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Menu" />

        <ListView
            android:id="@+id/listView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/popupAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Currently Playing:"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
