<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.develop.awong.musicplayer2.AlbumSongs"
    android:orientation="vertical">

    <Button
        android:id="@+id/albumMenuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Album Menu" />

    <ListView
        android:id="@+id/albumSongList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"/>

</LinearLayout>
